--- a/src/content/resources.adoc
+++ b/src/content/resources.adoc
@@ -9,7 +9,7 @@
 
 === Tools
 
-* link:https://harshkapadia2.github.io/git-graph[Git Graph: Visualize Commit, Tree and Blob objects^] (by Harsh Kapadia)
+* link:https://git-graph.harshkapadia.me[Git Graph: Visualize Commit, Tree and Blob objects^] (by Harsh Kapadia)
 
 === Articles
 
